fix: change for aligning text in center of textbox

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,8 @@ body, html {
     /* min-height: 50px;
     min-width: 50px; */
     text-align: center;
+    justify-content: center;
+    align-items: center;
     max-height: 300px;
     max-width: 400px;
 }
